--- a/UserManagementApp/appsettings.json
+++ b/UserManagementApp/appsettings.json
@@ -1,17 +1,25 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=AHMET;Database=UserManagementDb;Trusted_Connection=True;TrustServerCertificate=true;"
-  },
+  //"ConnectionStrings": {
+  //  "DefaultConnection": "Server=AHMET;Database=UserManagementDb;Trusted_Connection=True;TrustServerCertificate=true;"
+  //},
+
+  
+   "ConnectionStrings": {
+      "DefaultConnection": "Server=host.docker.internal,1433;Database=UserManagementDb;User Id=ahmetdocker;Password=12345;TrustServerCertificate=true;"
+   },
+  
+
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
- 
-   "Jwt": {
-      "Key": "343434343434454984891894156585dsadasdasdasdad8"
-   },
-  
+
+  "Jwt": {
+    "Key": "343434343434454984891894156585dsadasdasdasdad8"
+  },
+
   "AllowedHosts": "*"
 }
